--- a/image_editor.ipynb
+++ b/image_editor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "93da53d6",
    "metadata": {},
    "outputs": [
@@ -17,7 +17,7 @@
    ],
    "source": [
     "from diffusers.utils import make_image_grid\n",
-    "from helpers import OpenCvCanvas, generate_image"
+    "from helpers import OpenCvCanvas, generate_image, generate_image_controlnet"
    ]
   },
   {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "7a1e02ee",
    "metadata": {},
    "outputs": [
@@ -87,7 +87,8 @@
     "    \"negative_prompt\": negative_prompt\n",
     "}\n",
     "prompt = \"Top hat, fashionable, realistic, fabric\"\n",
-    "imgo = generate_image(mask, img, size, prompt, params)\n",
+    "upscaling_factor = 2 # Accidentally doubled the height and width while rendering and made results super good for abstract drawings\n",
+    "imgo = generate_image_controlnet(mask, img, (size[0]*upscaling_factor, size[1]*upscaling_factor), prompt, params).resize(size)\n",
     "# imgo.show()\n",
     "make_image_grid([window.get_base_pil(), window.get_base_painted_pil(), window.get_mask_pil(), imgo], rows=1, cols=4)"
    ]
