--- a/main.ipynb
+++ b/main.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "bce9cf63",
    "metadata": {},
    "outputs": [
@@ -55,7 +55,7 @@
    ],
    "source": [
     "size=(400,400) # image size\n",
-    "image_filename=\"labradoodle.jpg\"\n",
+    "image_filename=\"images/labradoodle.jpg\"\n",
     "\n",
     "# initialise CVPaint class\n",
     "window = CVPaint(image_filename, size, mask_padding=20)\n",
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "7a1e02ee",
    "metadata": {},
    "outputs": [
@@ -145,7 +145,7 @@
     "# Can swap between generate_image and generate_image_controlnet if you want to use an additional controlnet to (hopefully) improve results\n",
     "imgo = generate_image_controlnet(mask, img, (size[0]*upscaling_factor, size[1]*upscaling_factor), prompt, params).resize(size)\n",
     "# Saving + rendering\n",
-    "imgo.save(\"output.png\")\n",
+    "imgo.save(\"images/output.png\")\n",
     "labels = [\"1. Base\", \"2. Painted base\", \"3. Mask\", \"4. SDv1.5 Inpainting + ControlNet\"]\n",
     "make_image_row([window.get_base_pil(), window.get_base_painted_pil(), window.get_mask_pil(), imgo], labels)"
    ]
